--- a/classifier/nn/test.ipynb
+++ b/classifier/nn/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,16 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'label'\n",
-    "input_column = 'cleanTitle'\n",
+    "input_column = 'cleanBody'\n",
     "\n",
-    "train_data = pd.read_pickle('../../../Files/Submissions/train/train_split_submission.pickle') \n",
-    "valid_data = pd.read_pickle('../../../Files/Submissions/train/val_split_submission.pickle')\n",
-    "test_data = pd.read_pickle('../../../Files/Submissions/train/test_split_submission.pickle')\n",
+    "train_data = pd.read_pickle('../../../Files/Comments/train/train_split_comments.pickle') \n",
+    "valid_data = pd.read_pickle('../../../Files/Comments/train/val_split_comments.pickle')\n",
+    "test_data = pd.read_pickle('../../../Files/Comments/train/test_split_comments.pickle')\n",
     "\n",
     "train_data = train_data[[target, input_column]]\n",
     "valid_data = valid_data[[target, input_column]]\n",
@@ -421,27 +421,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1408474"
+       "300000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(test_data)"
+    "len(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "array([0., 1., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,17 +487,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "['shill', 'organization'] 2\n",
-      "[22655 17709     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0] 15\n"
+      "46\n",
+      "['canadian', 'sheep', 'sheep', 'covid[num', ']', 'vaccine', 'lose'] 7\n",
+      "[10592 67510 67510 15628   191 80643 42801     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0] 46\n"
      ]
     }
    ],
@@ -519,49 +521,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model\"\n",
+      "Model: \"model_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " word_IDs (InputLayer)       [(None, 15)]              0         \n",
+      " word_IDs (InputLayer)       [(None, 46)]              0         \n",
       "                                                                 \n",
-      " embedding (Embedding)       (None, 15, 64)            1836928   \n",
+      " embedding_2 (Embedding)     (None, 46, 64)            5543104   \n",
       "                                                                 \n",
-      " conv1d (Conv1D)             (None, 15, 64)            12352     \n",
+      " conv1d_2 (Conv1D)           (None, 46, 64)            12352     \n",
       "                                                                 \n",
-      " activation (Activation)     (None, 15, 64)            0         \n",
+      " activation_2 (Activation)   (None, 46, 64)            0         \n",
       "                                                                 \n",
-      " global_max_pooling1d (Globa  (None, 64)               0         \n",
-      " lMaxPooling1D)                                                  \n",
+      " global_max_pooling1d_2 (Glo  (None, 64)               0         \n",
+      " balMaxPooling1D)                                                \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 64)                0         \n",
+      " dropout_4 (Dropout)         (None, 64)                0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 32)                2080      \n",
+      " dense_4 (Dense)             (None, 32)                2080      \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 32)                0         \n",
+      " dropout_5 (Dropout)         (None, 32)                0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 3)                 99        \n",
+      " dense_5 (Dense)             (None, 3)                 99        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 1,851,459\n",
-      "Trainable params: 1,851,459\n",
+      "Total params: 5,557,635\n",
+      "Trainable params: 5,557,635\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-08-15 11:42:16.761199: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -612,25 +606,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "1079/1079 [==============================] - 24s 22ms/step - loss: 0.0379 - accuracy: 0.9839 - auc: 0.9995 - val_loss: 1.3737 - val_accuracy: 0.8266 - val_auc: 0.9164\n",
-      "Epoch 2/5\n",
-      "1079/1079 [==============================] - 11s 11ms/step - loss: 0.0373 - accuracy: 0.9841 - auc: 0.9995 - val_loss: 1.4615 - val_accuracy: 0.8272 - val_auc: 0.9136\n",
-      "Epoch 3/5\n",
-      "1079/1079 [==============================] - 12s 11ms/step - loss: 0.0381 - accuracy: 0.9837 - auc: 0.9994 - val_loss: 1.4907 - val_accuracy: 0.8253 - val_auc: 0.9125\n",
-      "Epoch 4/5\n",
-      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.0388 - accuracy: 0.9840 - auc: 0.9994 - val_loss: 1.3925 - val_accuracy: 0.8271 - val_auc: 0.9154\n",
-      "Epoch 5/5\n",
-      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.0370 - accuracy: 0.9844 - auc: 0.9995 - val_loss: 1.3994 - val_accuracy: 0.8253 - val_auc: 0.9155\n",
+      "Epoch 1/8\n",
+      "4688/4688 [==============================] - 221s 47ms/step - loss: 0.2979 - accuracy: 0.8740 - auc: 0.9755 - val_loss: 0.8658 - val_accuracy: 0.7283 - val_auc: 0.8865\n",
+      "Epoch 2/8\n",
+      "4688/4688 [==============================] - 218s 46ms/step - loss: 0.2926 - accuracy: 0.8759 - auc: 0.9763 - val_loss: 0.8885 - val_accuracy: 0.7305 - val_auc: 0.8874\n",
+      "Epoch 3/8\n",
+      "4688/4688 [==============================] - 209s 45ms/step - loss: 0.2883 - accuracy: 0.8777 - auc: 0.9770 - val_loss: 0.8673 - val_accuracy: 0.7345 - val_auc: 0.8865\n",
+      "Epoch 4/8\n",
+      "4688/4688 [==============================] - 181s 39ms/step - loss: 0.2834 - accuracy: 0.8799 - auc: 0.9777 - val_loss: 0.8669 - val_accuracy: 0.7412 - val_auc: 0.8907\n",
+      "Epoch 5/8\n",
+      "4688/4688 [==============================] - 203s 43ms/step - loss: 0.2804 - accuracy: 0.8811 - auc: 0.9782 - val_loss: 0.9407 - val_accuracy: 0.7348 - val_auc: 0.8844\n",
+      "Epoch 6/8\n",
+      "4688/4688 [==============================] - 193s 41ms/step - loss: 0.2760 - accuracy: 0.8827 - auc: 0.9789 - val_loss: 0.9585 - val_accuracy: 0.7381 - val_auc: 0.8859\n",
+      "Epoch 7/8\n",
+      "4688/4688 [==============================] - 188s 40ms/step - loss: 0.2721 - accuracy: 0.8842 - auc: 0.9794 - val_loss: 0.9471 - val_accuracy: 0.7347 - val_auc: 0.8840\n",
+      "Epoch 8/8\n",
+      "4688/4688 [==============================] - 189s 40ms/step - loss: 0.2703 - accuracy: 0.8839 - auc: 0.9797 - val_loss: 0.9368 - val_accuracy: 0.7325 - val_auc: 0.8824\n",
       "\n",
-      "Testing Accuracy:  0.8731\n"
+      "Testing Accuracy:  0.8795\n"
      ]
     }
    ],
@@ -655,14 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44015/44015 [==============================] - 43s 983us/step\n"
+      "7188/7188 [==============================] - 14s 2ms/step\n"
      ]
     }
    ],
@@ -672,31 +672,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9474369287490845"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "auc"
+    "model.save('../../../Files/models/CNN8-64.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.tofile('../../../Files/models/cnn_results2.txt', sep=' ')"
+    "results.tofile('../../../Files/models/cnn_comments_results.txt', sep=' ')"
    ]
   },
   {
