--- a/analysis/initial_analysis.ipynb
+++ b/analysis/initial_analysis.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "(1512133, 13)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "(43004, 13)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,22 +406,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>title</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>subreddit_subscribers</th>\n",
+       "      <th>crosspost_parent</th>\n",
+       "      <th>crosspost_parent_list</th>\n",
+       "      <th>num_crossposts</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>author</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ku7erg</td>\n",
+       "      <td>https://www.skynews.com.au/details/_6221591509001</td>\n",
+       "      <td>Australia - Pro-Vaccine Propaganda Campaign to...</td>\n",
+       "      <td>DebateVaccines</td>\n",
+       "      <td></td>\n",
+       "      <td>2239</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1610253018</td>\n",
+       "      <td>geneticshill</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ku7cfq</td>\n",
+       "      <td>https://www.sify.com/news/nasal-covid-vaccine-...</td>\n",
+       "      <td>Nasal Covid vaccine can be potential gamechanger</td>\n",
+       "      <td>DebateVaccines</td>\n",
+       "      <td></td>\n",
+       "      <td>2239</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1610252770</td>\n",
+       "      <td>geneticshill</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ku79pf</td>\n",
+       "      <td>https://www.marinij.com/2021/01/09/many-marin-...</td>\n",
+       "      <td>Many Marin hospital workers decline coronaviru...</td>\n",
+       "      <td>DebateVaccines</td>\n",
+       "      <td></td>\n",
+       "      <td>2239</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1610252496</td>\n",
+       "      <td>geneticshill</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ku5910</td>\n",
+       "      <td>https://www.livemint.com/news/world/twitter-re...</td>\n",
+       "      <td>Twitter removes Iran's top leader Khamenei's v...</td>\n",
+       "      <td>DebateVaccines</td>\n",
+       "      <td></td>\n",
+       "      <td>2237</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1610245239</td>\n",
+       "      <td>geneticshill</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ku45yg</td>\n",
+       "      <td>https://www.reddit.com/r/DebateVaccines/commen...</td>\n",
+       "      <td>Alright antivax people</td>\n",
+       "      <td>DebateVaccines</td>\n",
+       "      <td>[removed]</td>\n",
+       "      <td>2237</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1610241553</td>\n",
+       "      <td>epicpoppingamer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1555137"
+       "       id                                                url  \\\n",
+       "0  ku7erg  https://www.skynews.com.au/details/_6221591509001   \n",
+       "1  ku7cfq  https://www.sify.com/news/nasal-covid-vaccine-...   \n",
+       "2  ku79pf  https://www.marinij.com/2021/01/09/many-marin-...   \n",
+       "3  ku5910  https://www.livemint.com/news/world/twitter-re...   \n",
+       "4  ku45yg  https://www.reddit.com/r/DebateVaccines/commen...   \n",
+       "\n",
+       "                                               title       subreddit  \\\n",
+       "0  Australia - Pro-Vaccine Propaganda Campaign to...  DebateVaccines   \n",
+       "1   Nasal Covid vaccine can be potential gamechanger  DebateVaccines   \n",
+       "2  Many Marin hospital workers decline coronaviru...  DebateVaccines   \n",
+       "3  Twitter removes Iran's top leader Khamenei's v...  DebateVaccines   \n",
+       "4                             Alright antivax people  DebateVaccines   \n",
+       "\n",
+       "    selftext subreddit_subscribers crosspost_parent crosspost_parent_list  \\\n",
+       "0                             2239              NaN                   NaN   \n",
+       "1                             2239              NaN                   NaN   \n",
+       "2                             2239              NaN                   NaN   \n",
+       "3                             2237              NaN                   NaN   \n",
+       "4  [removed]                  2237              NaN                   NaN   \n",
+       "\n",
+       "  num_crossposts created_utc           author num_comments score  \n",
+       "0              0  1610253018     geneticshill          NaN   NaN  \n",
+       "1              0  1610252770     geneticshill          NaN   NaN  \n",
+       "2              0  1610252496     geneticshill          NaN   NaN  \n",
+       "3              0  1610245239     geneticshill          NaN   NaN  \n",
+       "4              0  1610241553  epicpoppingamer          NaN   NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1512133 + 43004"
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = df[(df['crosspost_parent'].notna()) | (df['num_crossposts'] > 0)].groupby('subreddit').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121086"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2.id.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1897"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "72 + 89 + 143 +387 +15 + 125 +1005 + 61"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Coronavirus           8000\n",
+       "LockdownSkepticism    8000\n",
+       "NoNewNormal           8000\n",
+       "CovidVaccinated       8000\n",
+       "COVID19               7833\n",
+       "DebateVaccines        2580\n",
+       "Vaccine                549\n",
+       "HermanCainAward         42\n",
+       "Name: subreddit, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.subreddit.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors = df.author.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "530339"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(authors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1512133"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "352\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df.subreddit.unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ABoringDystopia          8000\n",
+       "ShitLiberalsSay          8000\n",
+       "TrueOffMyChest           8000\n",
+       "politics                 8000\n",
+       "pics                     8000\n",
+       "                         ... \n",
+       "ThreeTimesFaster           15\n",
+       "CeticosRespostaCovid       12\n",
+       "NoNewNormalButSmarter      10\n",
+       "EnrichYourJourney           8\n",
+       "NolibsWatch                 2\n",
+       "Name: subreddit, Length: 352, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.subreddit.value_counts()"
    ]
   },
   {
