extend instead of append

--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4606,7 +4606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encoding of times"
+    "## Encoding of times"
    ]
   },
   {
@@ -4990,14 +4990,385 @@
    "source": [
     "df.cleanTitle"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Identifying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_files(dir):\n",
+    "    files = []\n",
+    "    for file in os.listdir(dir):\n",
+    "        if file.endswith(\".pickle\") and os.path.getsize(os.path.join(dir, file)) > 459:\n",
+    "            files.append(os.path.join(dir, file))\n",
+    "    return files.sort()\n",
+    "\n",
+    "\n",
+    "def identify_missing_files(dir, files):\n",
+    "    missing_files = []\n",
+    "    for file in files:\n",
+    "        if not os.path.exists(os.path.join(dir, file)) or os.path.getsize(os.path.join(dir, file)) <= 459:\n",
+    "            missing_files.append(file)\n",
+    "    return missing_files\n",
+    "\n",
+    "\n",
+    "def splittimeframe(subreddit, start, end, split): # splits the time into a series of smaller files to pull\n",
+    "    split_list = []\n",
+    "    step = (end - start) / split\n",
+    "    for i in range(split):\n",
+    "            s = int(start + i * step)\n",
+    "            e = int((start + (i + 1) * step) - 1)\n",
+    "            if i == split - 1:\n",
+    "                    e += 86400\n",
+    "            split_list.append(f'{subreddit}-{s}.pickle')\n",
+    "\n",
+    "    return split_list\n",
+    "\n",
+    "def find_existing_pulls(type, subreddits): #remove existing pulls from subreddits list\n",
+    "    done = os.listdir(f'../../Files/{type}/score/')\n",
+    "    done.append([e for e in os.listdir(f'../../Files/{type}/')])\n",
+    "    for i in done:\n",
+    "        done[done.index(i)] = i[:-7]\n",
+    "    res = [i for i in subreddits if i not in done]\n",
+    "    return res\n",
+    "\n",
+    "def merge_splits(files, subreddit, ptype): # merges the files down\n",
+    "    merge_candidates = []\n",
+    "    for file in files:\n",
+    "        try:\n",
+    "            if os.path.getsize(f'../../Files/{ptype}/temp/{file}') > 459:\n",
+    "                if file[:-18] == subreddit:\n",
+    "                    merge_candidates.append(f'../../Files/{ptype}/temp/{file}')\n",
+    "        except FileNotFoundError:\n",
+    "            pass\n",
+    "\n",
+    "    merge_candidates.sort()\n",
+    "    if len(merge_candidates) == 24:\n",
+    "        df = pd.concat([pd.read_pickle(candidate) for candidate in merge_candidates])\n",
+    "        df.to_pickle(f'../../Files/{ptype}/{subreddit}.pickle')\n",
+    "        print(f'{subreddit} merged')\n",
+    "        for i in merge_candidates:\n",
+    "            os.remove(i)\n",
+    "    else:\n",
+    "        print(f'{subreddit} has only {len(merge_candidates)} files to merge. Merging not possible.')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'args' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/3147567/Thesis/github/Test_run/test.ipynb Cell 125\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bdsba/home/3147567/Thesis/github/Test_run/test.ipynb#Y235sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(args\u001b[39m.\u001b[39msubreddits, newline\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdsba/home/3147567/Thesis/github/Test_run/test.ipynb#Y235sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     reader \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mreader(f)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdsba/home/3147567/Thesis/github/Test_run/test.ipynb#Y235sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     subreddits \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(reader)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'args' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "with open(args.subreddits, newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    subreddits = list(reader)\n",
+    "\n",
+    "subreddits = list(chain.from_iterable(subreddits))\n",
+    "\n",
+    "if args.job == 'Identify':\n",
+    "    subreddits_not_completed = find_existing_pulls(args.ptype, subreddits)\n",
+    "\n",
+    "    start = int(datetime.datetime(2020, 3, 1).timestamp())\n",
+    "    end = int(datetime.datetime(2022, 3, 31).timestamp())\n",
+    "    split = 24\n",
+    "    missing_parts = []\n",
+    "    for subreddit in subreddits_not_completed:\n",
+    "        \n",
+    "        subreddit_parts = splittimeframe(subreddit, start, end, split)\n",
+    "        missing = identify_missing_files(f'../../Files/{args.ptype}/temp/', subreddit_parts)\n",
+    "        for m in missing:\n",
+    "            missing_parts.append(m)\n",
+    "\n",
+    "\n",
+    "    file = open(f'../../Files/{args.ptype}/temp/missing.csv', \"w\")\n",
+    "    writer = csv.writer(file, delimiter = \"\\n\")\n",
+    "    for list_ in missing_parts:\n",
+    "        writer.writerow([list_])\n",
+    "    file.close()\n",
+    "\n",
+    "if args.job == 'Merge':\n",
+    "    files = []\n",
+    "    files = os.listdir(f'../../Files/{args.ptype}/temp/')\n",
+    "    files.pop(files.index('missing.csv'))\n",
+    "\n",
+    "    t = [file[:-18] for file in files]\n",
+    "\n",
+    "    subreddits = []\n",
+    "    for i in t:\n",
+    "        if i not in subreddits:\n",
+    "            subreddits.append(i)\n",
+    "\n",
+    "    for subreddit in subreddits:\n",
+    "        merge_splits(files, subreddit, args.ptype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../Preprocessing/subreddits_sm.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    subreddits = list(reader)\n",
+    "\n",
+    "subreddits = list(chain.from_iterable(subreddits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddits_not_completed = find_existing_pulls('Comments', subreddits)\n",
+    "\n",
+    "start = int(datetime.datetime(2020, 3, 1).timestamp())\n",
+    "end = int(datetime.datetime(2022, 3, 31).timestamp())\n",
+    "split = 24\n",
+    "missing_parts = []\n",
+    "for subreddit in subreddits_not_completed:\n",
+    "    \n",
+    "    subreddit_parts = splittimeframe(subreddit, start, end, split)\n",
+    "    missing = identify_missing_files(f'../../Files/Comments/temp/', subreddit_parts)\n",
+    "    for m in missing:\n",
+    "        missing_parts.append(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddits_not_completed = find_existing_pulls('Comments', subreddits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type = \"Comments\"\n",
+    "done = os.listdir(f'../../Files/{type}/score/')\n",
+    "done.extend(os.listdir(f'../../Files/{type}/'))\n",
+    "for i in done:\n",
+    "    done[done.index(i)] = i[:-7]\n",
+    "res = [i for i in subreddits if i not in done]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Government_is_lame',\n",
+       " 'WikiLeaks',\n",
+       " 'DemocraticSocialism',\n",
+       " 'weddingshaming',\n",
+       " 'collapse',\n",
+       " 'InternationalLeft',\n",
+       " 'aspiememes',\n",
+       " 'TheFightThatMatters',\n",
+       " 'LockdownCriticalLeft',\n",
+       " 'Astuff',\n",
+       " 'DebateVaccines',\n",
+       " 'POTUSWatch',\n",
+       " 'The_Ultimate',\n",
+       " 'libertarianmeme',\n",
+       " 'myanmar',\n",
+       " 'LouderWithCrowder',\n",
+       " 'Cringetopia',\n",
+       " 'AncientTruehistory',\n",
+       " 'AOC',\n",
+       " 'blursedimages',\n",
+       " 'ConservativeMemes',\n",
+       " 'conspiracyNOPOL',\n",
+       " 'GreenAndPleasant',\n",
+       " 'QAnonCasualties',\n",
+       " 'VACCINES',\n",
+       " 'aww',\n",
+       " 'ConspiracyUltra',\n",
+       " 'LateStageImperialism',\n",
+       " 'natureismetal',\n",
+       " 'wisconsin',\n",
+       " 'Labour',\n",
+       " 'NoNoNewNormal',\n",
+       " 'Slovakia',\n",
+       " 'AutisticPride',\n",
+       " 'altnewz',\n",
+       " 'Sino',\n",
+       " 'NEWPOLITIC',\n",
+       " 'CPUSA',\n",
+       " 'WomenInNews',\n",
+       " 'worldnewsvideo',\n",
+       " 'AmericanFascism2020',\n",
+       " 'EcoNewsNetwork',\n",
+       " 'OliverMarkusMalloy',\n",
+       " 'Anarchism',\n",
+       " 'ReallyAmerican',\n",
+       " 'thanksihateit',\n",
+       " 'NotoQanon',\n",
+       " 'didnthappen',\n",
+       " 'Africa',\n",
+       " 'thedavidpakmanshow',\n",
+       " 'KidsAreFuckingStupid',\n",
+       " 'PositiveNewsCovid19',\n",
+       " 'uninsurable',\n",
+       " 'uspolitics',\n",
+       " 'wokekids',\n",
+       " 'Palestine',\n",
+       " 'southafrica',\n",
+       " 'CapitolConsequences',\n",
+       " 'DeSantis',\n",
+       " 'daverubin',\n",
+       " 'AmericanPandemics',\n",
+       " 'CoronavirusVariants',\n",
+       " 'BadChoicesGoodStories',\n",
+       " 'MurderedByAOC',\n",
+       " 'noagenda',\n",
+       " 'NoNewNormalBan',\n",
+       " 'SocialJusticeInAction',\n",
+       " 'The_Chocker',\n",
+       " 'JordanPeterson',\n",
+       " 'WeirdNews4U',\n",
+       " 'anime_titties',\n",
+       " 'conspiracyhub',\n",
+       " 'BorderCollie',\n",
+       " 'JustUnsubbed',\n",
+       " 'InsaneParler',\n",
+       " 'TexasPolitics',\n",
+       " 'engrish',\n",
+       " 'Anarcho_Capitalism',\n",
+       " 'CoronavirusUS',\n",
+       " 'theyknew',\n",
+       " 'climateskeptics',\n",
+       " 'CovidIsACult',\n",
+       " 'PBS_NewsHour',\n",
+       " 'labor',\n",
+       " 'catsaysmao',\n",
+       " 'VoluntaristMemes',\n",
+       " 'Destiny',\n",
+       " 'TheMajorityReport',\n",
+       " 'ShitAmericansSay',\n",
+       " 'InformedTankie',\n",
+       " 'stupidpeoplefacebook',\n",
+       " 'Fuckthealtright',\n",
+       " 'CommunismMemes',\n",
+       " 'MarchAgainstNazis',\n",
+       " 'COMPLETEANARCHY',\n",
+       " 'ToiletPaperUSA',\n",
+       " 'ConservativesOnly',\n",
+       " 'wisconsinpolitics',\n",
+       " 'Economics',\n",
+       " 'CityPorn',\n",
+       " 'sciencememes',\n",
+       " 'fragilecommunism',\n",
+       " 'BreadTube',\n",
+       " 'Makesmybloodboil',\n",
+       " 'January6',\n",
+       " 'AskWomenOfColorOver30',\n",
+       " 'Political_Revolution',\n",
+       " 'sydney',\n",
+       " 'dontdeadopeninside',\n",
+       " 'composernews',\n",
+       " 'GAA',\n",
+       " 'WhatTheTwitter',\n",
+       " 'oldmaps',\n",
+       " 'megafaunarewilding',\n",
+       " 'NoNewNormal',\n",
+       " '',\n",
+       " 'worldnews247',\n",
+       " 'VanLife',\n",
+       " 'Archive.',\n",
+       " 'CovidVaccinated',\n",
+       " 'priorityP',\n",
+       " 'islam',\n",
+       " 'WalmartCelebrities',\n",
+       " 'WMAWCBF',\n",
+       " 'ClassPoliticsTwitter',\n",
+       " 'Trumpgret',\n",
+       " 'alberta',\n",
+       " 'Etobicoke',\n",
+       " 'StallmanWasRight',\n",
+       " 'uspolicy',\n",
+       " 'Awwducational',\n",
+       " 'theyknew',\n",
+       " 'vacci_nation',\n",
+       " 'CovidVaccineInjury',\n",
+       " '',\n",
+       " 'onguardforthee',\n",
+       " 'EndlessWar',\n",
+       " 'AccidentalComedy',\n",
+       " 'gay_irl',\n",
+       " 'BeansInThings',\n",
+       " 'enoughpetersonspam',\n",
+       " 'LandlordLove',\n",
+       " 'AreTheStraightsOK',\n",
+       " 'Anticonsumption',\n",
+       " 'mapporncirclejerk',\n",
+       " 'GoldandBlack',\n",
+       " 'ParentingWithoutFear',\n",
+       " 'israelexposed',\n",
+       " 'wholesome',\n",
+       " 'EnoughAntifaSpam',\n",
+       " 'Jung',\n",
+       " 'dontyouknowwhoiam',\n",
+       " 'EntitledBitch',\n",
+       " 'tifu',\n",
+       " 'TheHallOfShame',\n",
+       " 'Politsturm',\n",
+       " 'TrueAntiVaccination',\n",
+       " '',\n",
+       " 'Vaccine',\n",
+       " 'Keep_Track',\n",
+       " 'HermanCainAward',\n",
+       " 'WtWBBot',\n",
+       " 'TrollFaceIncident',\n",
+       " 'oddlyspecific',\n",
+       " 'criticalblunder',\n",
+       " 'Edmonton']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "done"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env_test')",
+   "display_name": "Python 3.9.12 ('reddit_env')",
    "language": "python",
    "name": "python3"
   },
@@ -5013,7 +5384,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
