--- a/classifier/evaluate_performance.ipynb
+++ b/classifier/evaluate_performance.ipynb
@@ -49,74 +49,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "def plot_roc_curve(y_test, y_pred):\n",
-    "  n_classes = len(np.unique(y_test))\n",
-    "  y_test = label_binarize(y_test, classes=np.arange(n_classes))\n",
-    "  y_pred = label_binarize(y_pred, classes=np.arange(n_classes))\n",
-    "\n",
-    "  # Compute ROC curve and ROC area for each class\n",
-    "  fpr = dict()\n",
-    "  tpr = dict()\n",
-    "  roc_auc = dict()\n",
-    "  thresholds = dict()\n",
-    "  for i in range(n_classes):\n",
-    "    fpr[i], tpr[i], thresholds[i] = roc_curve(y_test[:, i], y_pred[:, i], drop_intermediate=False)\n",
-    "    roc_auc[i] = auc(fpr[i], tpr[i])\n",
-    "\n",
-    "  # Compute micro-average ROC curve and ROC area\n",
-    "  fpr[\"micro\"], tpr[\"micro\"], _ = roc_curve(y_test.ravel(), y_pred.ravel())\n",
-    "  roc_auc[\"micro\"] = auc(fpr[\"micro\"], tpr[\"micro\"])\n",
-    "\n",
-    "  # First aggregate all false positive rates\n",
-    "  all_fpr = np.unique(np.concatenate([fpr[i] for i in range(n_classes)]))\n",
-    "\n",
-    "  # Then interpolate all ROC curves at this points\n",
-    "  mean_tpr = np.zeros_like(all_fpr)\n",
-    "  for i in range(n_classes):\n",
-    "    mean_tpr += np.interp(all_fpr, fpr[i], tpr[i])\n",
-    "\n",
-    "  # Finally average it and compute AUC\n",
-    "  mean_tpr /= n_classes\n",
-    "\n",
-    "  fpr[\"macro\"] = all_fpr\n",
-    "  tpr[\"macro\"] = mean_tpr\n",
-    "  roc_auc[\"macro\"] = auc(fpr[\"macro\"], tpr[\"macro\"])\n",
-    "\n",
-    "  # Plot all ROC curves\n",
-    "  plt.figure(figsize=(3,3))\n",
-    "  plt.figure(dpi=600)\n",
-    "  lw = 2\n",
-    "  plt.plot(fpr[\"micro\"], tpr[\"micro\"],\n",
-    "  label=\"micro-average ROC curve (area = {0:0.2f})\".format(roc_auc[\"micro\"]),\n",
-    "  color=\"deeppink\", linestyle=\":\", linewidth=4,)\n",
-    "\n",
-    "  plt.plot(fpr[\"macro\"], tpr[\"macro\"],\n",
-    "  label=\"macro-average ROC curve (area = {0:0.2f})\".format(roc_auc[\"macro\"]),\n",
-    "  color=\"navy\", linestyle=\":\", linewidth=4,)\n",
-    "\n",
-    "  colors = cycle([\"aqua\", \"darkorange\", \"darkgreen\", \"yellow\", \"blue\"])\n",
-    "  for i, color in zip(range(n_classes), colors):\n",
-    "    plt.plot(fpr[i], tpr[i], color=color, lw=lw,\n",
-    "    label=f\"ROC curve of class {i} (area = {roc_auc[i]})\")\n",
-    "\n",
-    "  plt.plot([0, 1], [0, 1], \"k--\", lw=lw)\n",
-    "  plt.xlim([0.0, 1.0])\n",
-    "  plt.ylim([0.0, 1.05])\n",
-    "  plt.xlabel(\"False Positive Rate\")\n",
-    "  plt.ylabel(\"True Positive Rate\")\n",
-    "  plt.title(\"Receiver Operating Characteristic (ROC) curve\")\n",
-    "  plt.legend()\n",
-    "  # plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -126,6 +58,7 @@
     "  y_test = label_binarize(y_test, classes=np.arange(n_classes))\n",
     "  y_pred = label_binarize(y_pred, classes=np.arange(n_classes))\n",
     "\n",
+    "  # Code for MultiClass ROC Curve from https://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html\n",
     "  # Compute ROC curve and ROC area for each class\n",
     "  fpr = dict()\n",
     "  tpr = dict()\n",
