quicker writing by not iterating entire dfs

--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5363,6 +5363,66 @@
    ],
    "source": [
     "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle('../../Files/Comments/score/POTUSWatch.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = os.listdir('../../Files/Comments/score/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files.remove('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbd = []\n",
+    "for file in files:\n",
+    "    df = pd.read_pickle(os.path.join('../../Files/Comments/score/', file))\n",
+    "    if 'cleanBody' not in df.columns:\n",
+    "        tbd.append(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['myanmar.pickle']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbd"
    ]
   }
  ],
