--- a/analysis/EDA_posts.ipynb
+++ b/analysis/EDA_posts.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,161 +34,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sl = df.groupby(['author', 'pred_1'], as_index=False).num_comments.count()"
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = df['created_utc'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author</th>\n",
-       "      <th>pred_1</th>\n",
-       "      <th>num_comments</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12djtpiy14</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1977_Chevy_K10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1Dragoe</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1MsConcerned</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ActualWish4164</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>370</th>\n",
-       "      <td>volv07</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>371</th>\n",
-       "      <td>yanks28th</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>372</th>\n",
-       "      <td>zartified</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>373</th>\n",
-       "      <td>zebraballer</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>374</th>\n",
-       "      <td>zippe6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>375 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             author  pred_1  num_comments\n",
-       "0        12djtpiy14     0.0             4\n",
-       "1    1977_Chevy_K10     1.0             1\n",
-       "2           1Dragoe     0.0             1\n",
-       "3      1MsConcerned     0.0             1\n",
-       "4    ActualWish4164     0.0             1\n",
-       "..              ...     ...           ...\n",
-       "370          volv07     1.0             1\n",
-       "371       yanks28th     0.0             1\n",
-       "372       zartified     0.0             1\n",
-       "373     zebraballer     2.0             1\n",
-       "374          zippe6     0.0             1\n",
-       "\n",
-       "[375 rows x 3 columns]"
+       "1615842983"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sl"
+    "date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 3, 15, 22, 16, 23)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.fromtimestamp(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3 = sl.pivot(index='author',columns='pred_1')"
+    "df['date'] = pd.to_datetime([datetime.fromtimestamp(f) for f in df['created_utc']]).date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t = df.groupby(['date', 'pred_1'], as_index=False).num_comments.count()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = t.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = t.pivot(index='date',columns='pred_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = t.pivot(index='date',columns='pred_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +174,7 @@
        "      <th>2.0</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>author</th>\n",
+       "      <th>date</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -233,32 +182,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12djtpiy14</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977_Chevy_K10</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1Dragoe</th>\n",
+       "      <th>2021-02-03</th>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1MsConcerned</th>\n",
+       "      <th>2021-02-08</th>\n",
+       "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-09</th>\n",
+       "      <td>11.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ActualWish4164</th>\n",
-       "      <td>1.0</td>\n",
+       "      <th>2021-02-10</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-11</th>\n",
+       "      <td>14.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -267,37 +216,37 @@
        "</div>"
       ],
       "text/plain": [
-       "               num_comments         \n",
-       "pred_1                  0.0  1.0 2.0\n",
-       "author                              \n",
-       "12djtpiy14              4.0  NaN NaN\n",
-       "1977_Chevy_K10          NaN  1.0 NaN\n",
-       "1Dragoe                 1.0  NaN NaN\n",
-       "1MsConcerned            1.0  NaN NaN\n",
-       "ActualWish4164          1.0  NaN NaN"
+       "           num_comments         \n",
+       "pred_1              0.0  1.0 2.0\n",
+       "date                            \n",
+       "2021-02-03          1.0  NaN NaN\n",
+       "2021-02-08          6.0  1.0 NaN\n",
+       "2021-02-09         11.0  NaN NaN\n",
+       "2021-02-10          5.0  NaN NaN\n",
+       "2021-02-11         14.0  NaN NaN"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3.head()"
+    "temp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df4 = df3.add(df3,  fill_value=0)"
+    "df4 = temp.add(t2,  fill_value=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +283,7 @@
        "      <th>2.0</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>author</th>\n",
+       "      <th>date</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -342,32 +291,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12djtpiy14</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1977_Chevy_K10</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1Dragoe</th>\n",
+       "      <th>2021-02-03</th>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1MsConcerned</th>\n",
+       "      <th>2021-02-08</th>\n",
+       "      <td>12.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-09</th>\n",
+       "      <td>22.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ActualWish4164</th>\n",
-       "      <td>2.0</td>\n",
+       "      <th>2021-02-10</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-11</th>\n",
+       "      <td>28.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -376,17 +325,17 @@
        "</div>"
       ],
       "text/plain": [
-       "               num_comments         \n",
-       "pred_1                  0.0  1.0 2.0\n",
-       "author                              \n",
-       "12djtpiy14              8.0  NaN NaN\n",
-       "1977_Chevy_K10          NaN  2.0 NaN\n",
-       "1Dragoe                 2.0  NaN NaN\n",
-       "1MsConcerned            2.0  NaN NaN\n",
-       "ActualWish4164          2.0  NaN NaN"
+       "           num_comments         \n",
+       "pred_1              0.0  1.0 2.0\n",
+       "date                            \n",
+       "2021-02-03          2.0  NaN NaN\n",
+       "2021-02-08         12.0  2.0 NaN\n",
+       "2021-02-09         22.0  NaN NaN\n",
+       "2021-02-10         10.0  NaN NaN\n",
+       "2021-02-11         28.0  NaN NaN"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4428,7 +4377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env_test')",
+   "display_name": "Python 3.9.12 ('reddit_env')",
    "language": "python",
    "name": "python3"
   },
@@ -4447,7 +4396,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
+    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
    }
   }
  },
